Fixed annoying wrapping when there aren't any notifications

--- a/app/webroot/css/menu.css
+++ b/app/webroot/css/menu.css
@@ -174,6 +174,7 @@ li#nav-notifications li#notification-viewall, li#nav-calendar li#calendar-viewal
 	text-align: center;
 	background: #eaeaea;
 	border-top: 1px solid #cccccc;
+	min-width: 200px;
 }
 li#nav-notifications li#notification-viewall a, li#nav-calendar li#calendar-viewall a {
 	display:inline;
